H4 text is not aligning correctly to the unordered list items, revisit this solution

--- a/style.css
+++ b/style.css
@@ -35,3 +35,7 @@ body {
 .tools-and-pantry li {
     align: left;
 }
+
+h4 {
+    text-align:j center;
+}
